--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/markdownit": "^1.2.9",
     "aos": "next",
     "bootstrap": "^4.3.1",
     "cross-env": "^5.2.0",
     "jquery": "^3.4.1",
-    "nuxt": "^2.8.1",
+    "nuxt": "^2.12.2",
     "popper.js": "^1.15.0",
     "vue-lazyload": "^1.3.1",
     "vue2-google-maps": "^0.10.6"
@@ -26,6 +27,7 @@
     "@nuxtjs/dotenv": "^1.3.0",
     "@nuxtjs/eslint-config": "^0.0.1",
     "babel-eslint": "^10.0.2",
+    "eslint": "^6.0.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-config-standard": ">=12.0.0",
     "eslint-loader": "^2.1.2",
@@ -37,8 +39,7 @@
     "eslint-plugin-promise": ">=4.2.1",
     "eslint-plugin-standard": ">=4.0.0",
     "eslint-plugin-vue": "^5.2.3",
-    "eslint": "^6.0.1",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.1",
     "nodemon": "^1.19.1",
     "prettier": "^1.18.2",
     "sass-loader": "^7.1.0"
