--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cross-env": "^5.2.0",
     "jquery": "^3.4.1",
     "nuxt": "^2.12.2",
+    "nuxt-generate": "0.0.0",
     "popper.js": "^1.15.0",
     "vue-lazyload": "^1.3.1",
     "vue2-google-maps": "^0.10.6"
